take away the #root overflow-y: hidden: from App.css that is preventing scrolling

--- a/src/App/App.css
+++ b/src/App/App.css
@@ -5,7 +5,6 @@
 }
 
 #root{
-  overflow-y: hidden;
   height: 100vh;
   background-color: #181818;
 }
